@@ -27,13 +27,40 @@ import com.jgraph.layout.simple.SimpleGridLayout;
 import com.jgraph.layout.tree.JGraphRadialTreeLayout;
 import com.jgraph.layout.tree.JGraphTreeLayout;
 import de.erdesignerng.ERDesignerBundle;
-import de.erdesignerng.model.*;
+import de.erdesignerng.model.Comment;
+import de.erdesignerng.model.Model;
+import de.erdesignerng.model.ModelItem;
+import de.erdesignerng.model.Relation;
+import de.erdesignerng.model.SubjectArea;
+import de.erdesignerng.model.Table;
+import de.erdesignerng.model.View;
 import de.erdesignerng.modificationtracker.VetoException;
 import de.erdesignerng.util.ApplicationPreferences;
 import de.erdesignerng.util.SQLUtils;
-import de.erdesignerng.visual.*;
-import de.erdesignerng.visual.common.*;
-import de.erdesignerng.visual.jgraph.cells.*;
+import de.erdesignerng.visual.DisplayLevel;
+import de.erdesignerng.visual.DisplayOrder;
+import de.erdesignerng.visual.ExportType;
+import de.erdesignerng.visual.LayoutHelper;
+import de.erdesignerng.visual.MessagesHelper;
+import de.erdesignerng.visual.common.AddCommentCommand;
+import de.erdesignerng.visual.common.AddRelationCommand;
+import de.erdesignerng.visual.common.AddTableCommand;
+import de.erdesignerng.visual.common.AddViewCommand;
+import de.erdesignerng.visual.common.ERDesignerComponent;
+import de.erdesignerng.visual.common.ExportGraphicsCommand;
+import de.erdesignerng.visual.common.GenericModelEditor;
+import de.erdesignerng.visual.common.OutlineComponent;
+import de.erdesignerng.visual.common.SQLComponent;
+import de.erdesignerng.visual.common.ToolEnum;
+import de.erdesignerng.visual.common.ZoomInfo;
+import de.erdesignerng.visual.jgraph.cells.CommentCell;
+import de.erdesignerng.visual.jgraph.cells.HideableCell;
+import de.erdesignerng.visual.jgraph.cells.ModelCell;
+import de.erdesignerng.visual.jgraph.cells.ModelCellWithPosition;
+import de.erdesignerng.visual.jgraph.cells.RelationEdge;
+import de.erdesignerng.visual.jgraph.cells.SubjectAreaCell;
+import de.erdesignerng.visual.jgraph.cells.TableCell;
+import de.erdesignerng.visual.jgraph.cells.ViewCell;
 import de.erdesignerng.visual.jgraph.cells.views.CellViewFactory;
 import de.erdesignerng.visual.jgraph.cells.views.RelationEdgeView;
 import de.erdesignerng.visual.jgraph.cells.views.TableCellView;
@@ -41,26 +68,41 @@ import de.erdesignerng.visual.jgraph.export.Exporter;
 import de.erdesignerng.visual.jgraph.export.ImageExporter;
 import de.erdesignerng.visual.jgraph.export.SVGExporter;
 import de.erdesignerng.visual.jgraph.plaf.basic.ERDesignerGraphUI;
-import de.erdesignerng.visual.jgraph.tools.*;
+import de.erdesignerng.visual.jgraph.tools.CommentTool;
+import de.erdesignerng.visual.jgraph.tools.EntityTool;
+import de.erdesignerng.visual.jgraph.tools.HandTool;
+import de.erdesignerng.visual.jgraph.tools.RelationTool;
+import de.erdesignerng.visual.jgraph.tools.ViewTool;
 import de.mogwai.common.client.looks.components.DefaultScrollPane;
 import de.mogwai.common.client.looks.components.action.ActionEventProcessor;
 import de.mogwai.common.client.looks.components.action.DefaultAction;
 import de.mogwai.common.client.looks.components.menu.DefaultMenu;
 import de.mogwai.common.client.looks.components.menu.DefaultMenuItem;
 import de.mogwai.common.i18n.ResourceHelperProvider;
-import java.awt.Dimension;
-import java.awt.Point;
+import org.apache.commons.lang.ArrayUtils;
+import org.apache.log4j.Logger;
+import org.jgraph.event.GraphLayoutCacheEvent;
+import org.jgraph.event.GraphModelEvent;
+import org.jgraph.event.GraphModelListener;
+import org.jgraph.event.GraphSelectionEvent;
+import org.jgraph.event.GraphSelectionListener;
+import org.jgraph.graph.CellView;
+import org.jgraph.graph.DefaultGraphCell;
+import org.jgraph.graph.DefaultGraphModel;
+import org.jgraph.graph.GraphLayoutCache;
+import org.jgraph.graph.GraphModel;
+
+import javax.swing.*;
+import java.awt.*;
 import java.awt.event.ActionEvent;
 import java.awt.geom.Point2D;
 import java.awt.geom.Rectangle2D;
-import java.util.*;
-import javax.swing.JComponent;
-import javax.swing.SwingConstants;
-import javax.swing.SwingUtilities;
-import org.apache.commons.lang.ArrayUtils;
-import org.apache.log4j.Logger;
-import org.jgraph.event.*;
-import org.jgraph.graph.*;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 
 public class JGraphEditor extends DefaultScrollPane implements GenericModelEditor {
 
@@ -188,6 +230,7 @@ public class JGraphEditor extends DefaultScrollPane implements GenericModelEdito
 
     public JGraphEditor() {
         layout = new ERDesignerGraphLayout(this);
+        setWheelScrollingEnabled(false);
         // We have to initialize the graph object.
         setModel(null);
     }
@@ -1252,5 +1295,11 @@ public class JGraphEditor extends DefaultScrollPane implements GenericModelEdito
         updatePositions();
 
         repaintGraph();
+    }
+
+    public void commandZoomOneLevelIn() {
+    }
+
+    public void commandZoomOneLevelOut() {
     }
 }
